--- a/src/main/resources/view/Main.css
+++ b/src/main/resources/view/Main.css
@@ -1,32 +1,32 @@
 .background {
-    -fx-background-color: derive(#1d1d1d, 20%);
-    background-color: #383838; /* Used in the default.html file */
+    -fx-background-color: derive(#FFFFFF, 20%);
+    background-color: #FFFFFF; /* Used in the default.html file */
 }
 
 .label {
     -fx-font-size: 11pt;
-    -fx-font-family: "Open Sans Semibold";
-    -fx-text-fill: #555555;
+    -fx-font-family: "Montserrat Semibold";
+    -fx-text-fill: black;
     -fx-opacity: 0.9;
 }
 
 .label-bright {
     -fx-font-size: 11pt;
-    -fx-font-family: "Open Sans Semibold";
+    -fx-font-family: "Montserrat Semibold";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .label-header {
     -fx-font-size: 32pt;
-    -fx-font-family: "Open Sans Light";
+    -fx-font-family: "Montserrat Light";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Open Sans Semibold";
+    -fx-font-family: "Montserrat Semibold";
 }
 
 .tab-pane {
@@ -40,9 +40,9 @@
 }
 
 .table-view {
-    -fx-base: #1d1d1d;
-    -fx-control-inner-background: #1d1d1d;
-    -fx-background-color: #1d1d1d;
+    -fx-base: #FFFFFF;
+    -fx-control-inner-background: #FFFFFF;
+    -fx-background-color: #FFFFFF;
     -fx-table-cell-border-color: transparent;
     -fx-table-header-border-color: transparent;
     -fx-padding: 5;
@@ -54,7 +54,7 @@
 
 .table-view .column-header, .table-view .filler {
     -fx-size: 35;
-    -fx-border-width: 0 0 1 0;
+    -fx-border-width: 0 0 0 0;
     -fx-background-color: transparent;
     -fx-border-color:
         transparent
@@ -66,8 +66,8 @@
 
 .table-view .column-header .label {
     -fx-font-size: 20pt;
-    -fx-font-family: "Open Sans Light";
-    -fx-text-fill: white;
+    -fx-font-family: "Montserrat Light";
+    /*-fx-text-fill: black; !*This does absolutely nothing*!*/
     -fx-alignment: center-left;
     -fx-opacity: 1;
 }
@@ -77,20 +77,14 @@
 }
 
 .split-pane:horizontal .split-pane-divider {
-    -fx-background-color: derive(#1d1d1d, 20%);
-    -fx-border-color: transparent transparent transparent #4d4d4d;
-}
-
-.split-pane {
-    -fx-border-radius: 1;
-    -fx-border-width: 1;
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: derive(#FFFFFF, 20%);
+    -fx-border-color: transparent transparent transparent transparent;
 }
 
 .list-view {
     -fx-background-insets: 0;
     -fx-padding: 0;
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: derive(#FFFFFF, 20%);
 }
 
 .list-cell {
@@ -100,111 +94,98 @@
 }
 
 .list-cell:filled:even {
-    -fx-background-color: #3c3e3f;
+    -fx-background-color: #FFFFFF;
 }
 
 .list-cell:filled:odd {
-    -fx-background-color: #515658;
+    -fx-background-color: #EBF2FA;
 }
 
 .list-cell:filled:selected {
-    -fx-background-color: #424d5f;
+    -fx-background-color: derive(#1C5D99, 100%);
 }
 
 .list-cell:filled:selected #cardPane {
-    -fx-border-color: #3e7b91;
-    -fx-border-width: 1;
+    -fx-border-color: #1C5D99;
+/*// This seems to do nothing*/
+    -fx-border-width: 0;
 }
 
 .list-cell .label {
-    -fx-text-fill: white;
+    /*-fx-text-fill: black;*/
 }
 
 .cell_big_label {
-    -fx-font-family: "Open Sans Semibold";
+    -fx-font-family: "Montserrat Semibold";
     -fx-font-size: 16px;
-    -fx-text-fill: #010504;
+    /*-fx-text-fill: #010504;*/
 }
 
 .cell_small_label {
-    -fx-font-family: "Open Sans Regular";
+    -fx-font-family: "Montserrat Regular";
     -fx-font-size: 13px;
-    -fx-text-fill: #010504;
 }
 
 .stack-pane {
-     -fx-background-color: derive(#1d1d1d, 20%);
-}
-
-.pane-with-border {
-     -fx-background-color: derive(#1d1d1d, 20%);
-     -fx-border-color: derive(#1d1d1d, 10%);
-     -fx-border-top-width: 1px;
+     -fx-background-color: derive(#FFFFFF, 20%);
 }
 
 .status-bar {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: derive(#0046fe, 0%);
 }
 
+.pane-with-border {
+    -fx-background-color: white;
+}
 .result-display {
-    -fx-background-color: transparent;
-    -fx-font-family: "Open Sans Light";
+    -fx-background-color: white; /* this does absolutely nothing*/
+    -fx-font-family: "Montserrat Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: white;
+    /*-fx-text-fill: black;*/
+    -fx-border-radius: 10, 10;
 }
 
 .result-display .label {
-    -fx-text-fill: black !important;
+    -fx-text-fill: white !important;
 }
 
 .status-bar .label {
-    -fx-font-family: "Open Sans Light";
+    -fx-font-family: "Montserrat";
     -fx-text-fill: white;
     -fx-padding: 4px;
     -fx-pref-height: 30px;
 }
 
-.status-bar-with-border {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
-    -fx-border-width: 1px;
-}
-
-.status-bar-with-border .label {
-    -fx-text-fill: white;
-}
-
 .grid-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 30%);
-    -fx-border-width: 1px;
+    -fx-border-width: 0px;
 }
 
 .grid-pane .stack-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: derive(#FFFFFF, 30%);
 }
 
 .context-menu {
-    -fx-background-color: derive(#1d1d1d, 50%);
+    -fx-background-color: derive(#FFFFFF, 50%);
 }
 
 .context-menu .label {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .menu-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #0046fe;
 }
 
 .menu-bar .label {
     -fx-font-size: 14pt;
-    -fx-font-family: "Open Sans Light";
+    -fx-font-family: "Montserrat";
     -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
 
 .menu .left-container {
-    -fx-background-color: black;
+    /*Not so sure what this code for*/
+    -fx-background-color: white;
 }
 
 /*
@@ -215,27 +196,28 @@
 .button {
     -fx-padding: 5 22 5 22;
     -fx-border-color: #e2e2e2;
-    -fx-border-width: 2;
+    -fx-border-width: 0;
     -fx-background-radius: 0;
-    -fx-background-color: #1d1d1d;
-    -fx-font-family: "Open Sans Regular";
+    -fx-background-color: white; // Not sure what exactly is this changing
+    -fx-font-family: "Montserrat";
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:hover {
-    -fx-background-color: #3a3a3a;
+    /*-fx-background-color: #3a3a3a;*/
 }
 
 .button:pressed, .button:default:hover:pressed {
   -fx-background-color: white;
-  -fx-text-fill: #1d1d1d;
+  -fx-text-fill: black;
+/*not sure what this code for*/
 }
 
 .button:focused {
     -fx-border-color: white, white;
-    -fx-border-width: 1, 1;
+    -fx-border-width: 0, 0;
     -fx-border-style: solid, segments(1, 1);
     -fx-border-radius: 0, 0;
     -fx-border-insets: 1 1 1 1, 0;
@@ -243,7 +225,7 @@
 
 .button:disabled, .button:default:disabled {
     -fx-opacity: 0.4;
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #FFFFFF;
     -fx-text-fill: white;
 }
 
@@ -257,11 +239,11 @@
 }
 
 .dialog-pane {
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #FFFFFF;
 }
 
 .dialog-pane > *.button-bar > *.container {
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #FFFFFF;
 }
 
 .dialog-pane > *.label.content {
@@ -271,7 +253,7 @@
 }
 
 .dialog-pane:header *.header-panel {
-    -fx-background-color: derive(#1d1d1d, 25%);
+    -fx-background-color: derive(#FFFFFF, 25%);
 }
 
 .dialog-pane:header *.header-panel *.label {
@@ -282,11 +264,11 @@
 }
 
 .scroll-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: white;
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#1d1d1d, 50%);
+    -fx-background-color: derive(#d8d8d8, 0%);
     -fx-background-insets: 3;
 }
 
@@ -321,19 +303,20 @@
     -fx-background-color: transparent #383838 transparent #383838;
     -fx-background-insets: 0;
     -fx-border-color: #383838 #383838 #ffffff #383838;
+    -fx-border-radius: 10, 10;
     -fx-border-insets: 0;
-    -fx-border-width: 1;
-    -fx-font-family: "Open Sans Light";
+    -fx-border-width: 0;
+    -fx-font-family: "Montserrat Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: white;
+    /*-fx-text-fill: black;*/
 }
-
+/*not sure what this one is coding for*/
 #filterField, #ingredientListPanel, #ingredientWebpage {
-    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+    /*-fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);*/
 }
 
 #resultDisplay .content {
-    -fx-background-color: transparent, #383838, transparent, #383838;
+    -fx-background-color: transparent, transparent, transparent, transparent;
     -fx-background-radius: 0;
 }
 
