--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -12,15 +12,15 @@
 <?import javafx.scene.layout.VBox?>
 
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="Description App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
+         title="Fridgy" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
   <icons>
-    <Image url="@/images/address_book_32.png" />
+    <Image url="@/images/cute_fridge.png" />
   </icons>
   <scene>
     <Scene>
       <stylesheets>
         <URL value="@Fonts.css"/>
-        <URL value="@DarkTheme.css" />
+        <URL value="@Main.css" />
         <URL value="@Extensions.css" />
       </stylesheets>
 
