--- a/src/main/resources/view/IngredientListCard.fxml
+++ b/src/main/resources/view/IngredientListCard.fxml
@@ -30,7 +30,7 @@
       <FlowPane fx:id="tags" />
       <Label fx:id="quantity" styleClass="cell_small_label" text="\$quantity" />
       <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate" />
     </VBox>
   </GridPane>
 </HBox>
