--- a/src/main/resources/view/Main.css
+++ b/src/main/resources/view/Main.css
@@ -1,86 +1,153 @@
-.background {
-    -fx-background-color: derive(#FFFFFF, 20%);
-    background-color: #FFFFFF; /* Used in the default.html file */
+.main-window {
+    -fx-background-color: #FFFFFF;
+    -fx-font-family: "Montserrat";
 }
 
-.label {
-    -fx-font-size: 11pt;
-    -fx-font-family: "Montserrat Semibold";
+.root {
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+}
+
+/*menu bar*/
+.menu-bar {
+    -fx-background-color: #0046fe;
+}
+
+.menu-bar .label {
+    -fx-font-family: "Montserrat SemiBold";
+    -fx-text-fill: white;
+    -fx-opacity: 0.9;
+}
+
+.menu-item .label {
+    -fx-font-family: "Montserrat";
     -fx-text-fill: black;
     -fx-opacity: 0.9;
 }
 
-.label-bright {
-    -fx-font-size: 11pt;
-    -fx-font-family: "Montserrat Semibold";
-    -fx-text-fill: white;
-    -fx-opacity: 1;
-}
-
-.label-header {
-    -fx-font-size: 32pt;
-    -fx-font-family: "Montserrat Light";
-    -fx-text-fill: white;
-    -fx-opacity: 1;
-}
-
-.text-field {
-    -fx-font-size: 12pt;
-    -fx-font-family: "Montserrat Semibold";
-}
-
-.tab-pane {
-    -fx-padding: 0 0 0 1;
-}
-
-.tab-pane .tab-header-area {
-    -fx-padding: 0 0 0 0;
-    -fx-min-height: 0;
-    -fx-max-height: 0;
-}
-
-.table-view {
-    -fx-base: #FFFFFF;
-    -fx-control-inner-background: #FFFFFF;
+.split-pane {
     -fx-background-color: #FFFFFF;
-    -fx-table-cell-border-color: transparent;
-    -fx-table-header-border-color: transparent;
-    -fx-padding: 5;
 }
 
-.table-view .column-header-background {
+.status-bar {
+    -fx-background-color: #0046fe;
+    -fx-pref-height: 30px;
+}
+
+.status-bar .label {
+    -fx-text-fill: white;
+    -fx-font-weight: normal;
+    -fx-padding: 4px;
+}
+.text-area {
+    -fx-background-color: #EBECF0;
+    -fx-background-radius: 15;
+    -fx-border-radius: 15;
+    -fx-border-color: transparent;
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+.text-area .scroll-pane .viewport{
+    -fx-background-color: transparent;
+}
+.text-area .scroll-pane .content{
     -fx-background-color: transparent;
 }
 
-.table-view .column-header, .table-view .filler {
-    -fx-size: 35;
-    -fx-border-width: 0 0 0 0;
+/* This doesn't actually disable the shifting, just make it transparent*/
+.split-pane:horizontal > .split-pane-divider {
     -fx-background-color: transparent;
-    -fx-border-color:
-        transparent
-        transparent
-        derive(-fx-base, 80%)
-        transparent;
-    -fx-border-insets: 0 10 1 0;
+}
+.split-pane:vertical > .split-pane-divider {
+    -fx-background-color: transparent;
 }
 
-.table-view .column-header .label {
-    -fx-font-size: 20pt;
-    -fx-font-family: "Montserrat Light";
-    /*-fx-text-fill: black; !*This does absolutely nothing*!*/
-    -fx-alignment: center-left;
-    -fx-opacity: 1;
+/*.result-display .content{*/
+/*    -fx-background-color: #EBECF0;*/
+/*    -fx-font-family: "Montserrat Light";*/
+/*    -fx-font-size: 13pt;*/
+/*    -fx-border-radius: 10, 10;*/
+/*}*/
+
+/* tab pane*/
+.tab-pane .tab-header-background {
+    -fx-background-color: white;
 }
 
-.table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: -fx-focus-color;
+.tab-pane .tab-header-area .tab-down-button {
+    -fx-background-color: WHITE;
+    -fx-min-width: 0.8em;
+    -fx-max-width: 0.8em;
+    -fx-min-height: 1.3em;
+    -fx-max-height: 1.3em;
 }
 
-.split-pane:horizontal .split-pane-divider {
-    -fx-background-color: derive(#FFFFFF, 20%);
+.tab-pane .tab-header-area .tab-header-background {
+    -fx-opacity: 0;
+}
+
+.tab-pane
+{
+    -fx-tab-min-width:90px;
+}
+
+.tab{
+    -fx-background-insets: 0 1 0 1,0,0;
+}
+
+.tab-pane .tab
+{
+    -fx-background-color: white;
     -fx-border-color: transparent transparent transparent transparent;
 }
 
+.tab-pane .tab:hover
+{
+    -fx-background-color: #EBF2FA;
+}
+
+.tab-pane .tab:selected
+{
+    -fx-background-color: white;
+    -fx-border-color: transparent transparent #0046fe transparent;
+    -fx-font-family: "Montserrat SemiBold";
+    -fx-border-width: 0 0 2 0;
+}
+
+.tab:selected .tab-label {
+    -fx-text-fill: #0046fe;
+}
+
+/*text field*/
+.text-field {
+    -fx-focus-color: #4059A9;
+    -fx-unfocus-color: #4d4d4d;
+    -fx-padding: 0.333333em 0 0.333333em 0;
+    -fx-background-color: transparent, transparent, transparent;
+    -fx-border-color: transparent transparent #EBF2FA transparent;
+    -fx-prompt-text-fill: #C5C5C5;
+}
+
+.text-field > .input-line {
+    -fx-background-color: -jfx-unfocus-color;
+    -fx-pref-height: 1px;
+    -fx-translate-y: 1px;
+}
+
+.text-field > .input-focused-line {
+    -fx-background-color: -jfx-focus-color;
+    -fx-pref-height: 2px;
+}
+
+.text-field:focused {
+    -fx-background-color: transparent, transparent, transparent;
+    -fx-border-color: transparent transparent #1C5D99 transparent;
+    -fx-prompt-text-fill: #C5C5C5;
+}
+
+/*The list view*/
 .list-view {
     -fx-background-insets: 0;
     -fx-padding: 0;
@@ -105,20 +172,13 @@
     -fx-background-color: derive(#1C5D99, 100%);
 }
 
-.list-cell:filled:selected #cardPane {
-    -fx-border-color: #1C5D99;
-/*// This seems to do nothing*/
-    -fx-border-width: 0;
-}
-
 .list-cell .label {
-    /*-fx-text-fill: black;*/
+    -fx-text-fill: black;
 }
 
 .cell_big_label {
     -fx-font-family: "Montserrat Semibold";
     -fx-font-size: 16px;
-    /*-fx-text-fill: #010504;*/
 }
 
 .cell_small_label {
@@ -126,143 +186,22 @@
     -fx-font-size: 13px;
 }
 
-.stack-pane {
-     -fx-background-color: derive(#FFFFFF, 20%);
+#tags {
+    -fx-hgap: 9;
+    -fx-vgap: 4;
 }
 
-.status-bar {
-    -fx-background-color: derive(#0046fe, 0%);
-}
-
-.pane-with-border {
-    -fx-background-color: white;
-}
-.result-display {
-    -fx-background-color: white; /* this does absolutely nothing*/
-    -fx-font-family: "Montserrat Light";
-    -fx-font-size: 13pt;
-    /*-fx-text-fill: black;*/
-    -fx-border-radius: 10, 10;
-}
-
-.result-display .label {
-    -fx-text-fill: white !important;
-}
-
-.status-bar .label {
-    -fx-font-family: "Montserrat";
+#tags .label {
     -fx-text-fill: white;
-    -fx-padding: 4px;
-    -fx-pref-height: 30px;
+    -fx-font-family: "Montserrat SemiBold";
+    -fx-background-color:  #0046fe;
+    -fx-padding: 2 4 2 4;
+    -fx-border-radius: 5;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
 }
 
-.grid-pane {
-    -fx-border-width: 0px;
-}
-
-.grid-pane .stack-pane {
-    -fx-background-color: derive(#FFFFFF, 30%);
-}
-
-.context-menu {
-    -fx-background-color: derive(#FFFFFF, 50%);
-}
-
-.context-menu .label {
-    -fx-text-fill: black;
-}
-
-.menu-bar {
-    -fx-background-color: #0046fe;
-}
-
-.menu-bar .label {
-    -fx-font-size: 14pt;
-    -fx-font-family: "Montserrat";
-    -fx-text-fill: white;
-    -fx-opacity: 0.9;
-}
-
-.menu .left-container {
-    /*Not so sure what this code for*/
-    -fx-background-color: white;
-}
-
-/*
- * Metro style Push Button
- * Author: Pedro Duque Vieira
- * http://pixelduke.wordpress.com/2012/10/23/jmetro-windows-8-controls-on-java/
- */
-.button {
-    -fx-padding: 5 22 5 22;
-    -fx-border-color: #e2e2e2;
-    -fx-border-width: 0;
-    -fx-background-radius: 0;
-    -fx-background-color: white; // Not sure what exactly is this changing
-    -fx-font-family: "Montserrat";
-    -fx-font-size: 11pt;
-    -fx-text-fill: #d8d8d8;
-    -fx-background-insets: 0 0 0 0, 0, 1, 2;
-}
-
-.button:hover {
-    /*-fx-background-color: #3a3a3a;*/
-}
-
-.button:pressed, .button:default:hover:pressed {
-  -fx-background-color: white;
-  -fx-text-fill: black;
-/*not sure what this code for*/
-}
-
-.button:focused {
-    -fx-border-color: white, white;
-    -fx-border-width: 0, 0;
-    -fx-border-style: solid, segments(1, 1);
-    -fx-border-radius: 0, 0;
-    -fx-border-insets: 1 1 1 1, 0;
-}
-
-.button:disabled, .button:default:disabled {
-    -fx-opacity: 0.4;
-    -fx-background-color: #FFFFFF;
-    -fx-text-fill: white;
-}
-
-.button:default {
-    -fx-background-color: -fx-focus-color;
-    -fx-text-fill: #ffffff;
-}
-
-.button:default:hover {
-    -fx-background-color: derive(-fx-focus-color, 30%);
-}
-
-.dialog-pane {
-    -fx-background-color: #FFFFFF;
-}
-
-.dialog-pane > *.button-bar > *.container {
-    -fx-background-color: #FFFFFF;
-}
-
-.dialog-pane > *.label.content {
-    -fx-font-size: 14px;
-    -fx-font-weight: bold;
-    -fx-text-fill: white;
-}
-
-.dialog-pane:header *.header-panel {
-    -fx-background-color: derive(#FFFFFF, 25%);
-}
-
-.dialog-pane:header *.header-panel *.label {
-    -fx-font-size: 18px;
-    -fx-font-style: italic;
-    -fx-fill: white;
-    -fx-text-fill: white;
-}
-
+/*Scroll Bar*/
 .scroll-bar {
     -fx-background-color: white;
 }
@@ -271,7 +210,6 @@
     -fx-background-color: derive(#d8d8d8, 0%);
     -fx-background-insets: 3;
 }
-
 .scroll-bar .increment-button, .scroll-bar .decrement-button {
     -fx-background-color: transparent;
     -fx-padding: 0 0 0 0;
@@ -287,49 +225,4 @@
 
 .scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
     -fx-padding: 8 1 8 1;
-}
-
-#cardPane {
-    -fx-background-color: transparent;
-    -fx-border-width: 0;
-}
-
-#commandTypeLabel {
-    -fx-font-size: 11px;
-    -fx-text-fill: #F70D1A;
-}
-
-#commandTextField {
-    -fx-background-color: transparent #383838 transparent #383838;
-    -fx-background-insets: 0;
-    -fx-border-color: #383838 #383838 #ffffff #383838;
-    -fx-border-radius: 10, 10;
-    -fx-border-insets: 0;
-    -fx-border-width: 0;
-    -fx-font-family: "Montserrat Light";
-    -fx-font-size: 13pt;
-    /*-fx-text-fill: black;*/
-}
-/*not sure what this one is coding for*/
-#filterField, #ingredientListPanel, #ingredientWebpage {
-    /*-fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);*/
-}
-
-#resultDisplay .content {
-    -fx-background-color: transparent, transparent, transparent, transparent;
-    -fx-background-radius: 0;
-}
-
-#tags {
-    -fx-hgap: 7;
-    -fx-vgap: 3;
-}
-
-#tags .label {
-    -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
-    -fx-font-size: 11;
 }
