--- a/src/main/resources/view/IngredientListCard.fxml
+++ b/src/main/resources/view/IngredientListCard.fxml
@@ -25,12 +25,12 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" wrapText="true" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="quantity" styleClass="cell_small_label" text="\$quantity" />
-      <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate" />
-      <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
+      <Label fx:id="quantity" wrapText="true" styleClass="cell_small_label" text="\$quantity" />
+      <Label fx:id="expiryDate" wrapText="true" styleClass="cell_small_label" text="\$expiryDate" />
+      <Label fx:id="description" wrapText="true" styleClass="cell_small_label" text="\$description" />
     </VBox>
   </GridPane>
 </HBox>
