--- a/src/main/resources/view/RecipeListCard.fxml
+++ b/src/main/resources/view/RecipeListCard.fxml
@@ -25,10 +25,10 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" wrapText="true" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="ingredients" />
-      <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
+      <Label fx:id="description" wrapText="true" styleClass="cell_small_label" text="\$description" />
     </VBox>
   </GridPane>
 </HBox>
