--- a/src/main/resources/view/RecipeListCard.fxml
+++ b/src/main/resources/view/RecipeListCard.fxml
@@ -28,6 +28,7 @@
                 <Label fx:id="name" wrapText="true" text="\$first" styleClass="cell_big_label" />
             </HBox>
             <FlowPane fx:id="ingredients" />
+            <Label fx:id="steps" wrapText="true" styleClass="cell_small_label" text="\$steps" />
             <Label fx:id="description" wrapText="true" styleClass="cell_small_label" text="\$description" />
         </VBox>
     </GridPane>
