--- a/src/main/resources/view/IngredientDisplay.fxml
+++ b/src/main/resources/view/IngredientDisplay.fxml
@@ -18,18 +18,12 @@
             <padding>
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
-            <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="id" styleClass="cell_big_label">
-                    <minWidth>
-                        <!-- Ensures that the label text is never truncated -->
-                        <Region fx:constant="USE_PREF_SIZE" />
-                    </minWidth>
-                </Label>
-                <Label fx:id="name" wrapText="true" text="\$first" styleClass="cell_big_label" />
-            </HBox>
+            <Label fx:id="name" wrapText="true" text="\$first" styleClass="cell_big_label" />
+            <FlowPane fx:id="tags" />
+            <Label fx:id="quantity" wrapText="true" styleClass="cell_small_label" text="\$quantity" />
+            <Label fx:id="expiryDate" wrapText="true" styleClass="cell_small_label" text="\$expiryDate" />
             <Label fx:id="description" wrapText="true" styleClass="cell_small_label" text="\$description" />
-            <FlowPane fx:id="ingredients" />
-<!--            <Label fx:id="steps" wrapText="true" styleClass="cell_small_label" text="\$steps" />-->
         </VBox>
     </GridPane>
 </HBox>
+
