--- a/src/main/resources/view/RecipeDisplay.fxml
+++ b/src/main/resources/view/RecipeDisplay.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
@@ -15,17 +13,15 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
         </columnConstraints>
-        <VBox fx:id="recipeDisplay" alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+        <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
             <padding>
                 <Insets bottom="5" left="15" right="5" top="5" />
             </padding>
             <Label fx:id="name" styleClass="cell_big_label" text="\$first" wrapText="true" />
             <FlowPane fx:id="ingredients" />
             <Label fx:id="description" styleClass="cell_small_label" text="\$description" wrapText="true" />
-         <VBox id="steps" prefHeight="55.0" prefWidth="130.0" />
+<!--         <VBox id="steps" prefHeight="55.0" prefWidth="130.0" />-->
+            <Label fx:id="steps" wrapText="true" styleClass="cell_small_label" text="\$steps" />
         </VBox>
-      <rowConstraints>
-         <RowConstraints />
-      </rowConstraints>
     </GridPane>
 </HBox>
