--- a/src/main/resources/view/IngredientDisplay.fxml
+++ b/src/main/resources/view/IngredientDisplay.fxml
@@ -17,11 +17,12 @@
             <padding>
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
-            <Label fx:id="name" wrapText="true" text="\$first" styleClass="cell_big_label" />
+            <Label fx:id="name" styleClass="name_display" wrapText="true" text="\$first" />
             <FlowPane fx:id="tags" />
             <Label fx:id="quantity" wrapText="true" styleClass="cell_small_label" text="\$quantity" />
-            <Label fx:id="expiryDate" wrapText="true" styleClass="cell_small_label" text="\$expiryDate" />
-            <Label fx:id="description" wrapText="true" styleClass="cell_small_label" text="\$description" />
+            <Label fx:id="expiryDate" wrapText="true" styleClass="expiry_display" text="\$expiryDate" />
+            <Label fx:id="description" wrapText="true" styleClass="ingredient_description_display" text="\$description"
+                   prefWidth="Infinity" />
         </VBox>
     </GridPane>
 </HBox>
