--- a/src/main/resources/view/IngredientListCard.fxml
+++ b/src/main/resources/view/IngredientListCard.fxml
@@ -30,7 +30,7 @@
             <FlowPane fx:id="tags" />
             <Label fx:id="quantity" wrapText="true" styleClass="cell_small_label" text="\$quantity" />
             <Label fx:id="expiryDate" wrapText="true" styleClass="cell_small_label" text="\$expiryDate" />
-            <Label fx:id="description" wrapText="true" styleClass="cell_small_label" text="\$description" />
+            <Label fx:id="description" wrapText="true" styleClass="description_label" text="\$description" />
         </VBox>
     </GridPane>
 </HBox>
