--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -42,32 +40,7 @@
                     <HBox AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                           AnchorPane.topAnchor="30.0">
                         <children>
-                            <TabPane minWidth="400.0" prefWidth="500.0" tabClosingPolicy="UNAVAILABLE">
-                                <tabs>
-                                    <Tab text="Ingredient">
-                                        <content>
-                                            <VBox fx:id="ingredientList" minWidth="400" prefWidth="400" VBox.vgrow="ALWAYS"
-                                                  styleClass="main-window">
-                                                <padding>
-                                                    <Insets bottom="10" left="10" right="10" top="10" />
-                                                </padding>
-                                                <StackPane  styleClass="main-window" fx:id="ingredientListPanelPlaceholder"
-                                                            VBox.vgrow="ALWAYS" />
-                                            </VBox>
-                                        </content>
-                                    </Tab>
-                                    <Tab text="Recipe">
-                                        <content>
-                                            <VBox fx:id="recipeList" minWidth="400" prefWidth="400" VBox.vgrow="ALWAYS">
-                                                <padding>
-                                                    <Insets bottom="10" left="10" right="10" top="10" />
-                                                </padding>
-                                                <StackPane fx:id="recipeListPanelPlaceholder" VBox.vgrow="ALWAYS" />
-                                            </VBox>
-                                        </content>
-                                    </Tab>
-                                </tabs>
-                            </TabPane>
+                            <VBox fx:id="tabListPanelPlaceholder" minWidth="400.0" prefWidth="500.0" />
                             <VBox>
                                 <padding>
                                     <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
