--- a/src/main/resources/view/TabListPanel.fxml
+++ b/src/main/resources/view/TabListPanel.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" tabClosingPolicy="UNAVAILABLE">
+<TabPane fx:id="tabPane" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"  tabClosingPolicy="UNAVAILABLE">
     <tabs>
         <Tab text="Ingredient">
             <content>
