--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -13,7 +13,6 @@
 
 .site-title {
   @include relative-font-size(1.625);
-  color: $title-color;
   font-weight: 300;
   letter-spacing: -1px;
   margin-bottom: 0;
@@ -75,7 +74,7 @@
   }
 
   .page-link {
-    color: $title-color;
+    color: $text-color;
     line-height: $base-line-height;
     display: block;
     padding: 5px 10px;
